--- a/style.css
+++ b/style.css
@@ -37,20 +37,56 @@ p{
 }
 button{
     background:linear-gradient(rgb(60,60,60),rgb(40,40,40));
-    color:white;
-    box-shadow:2px 2px 0.5px rgba(0,0,0,0.3);
+    color:lightgray;
+    box-shadow:0px 0px 1px rgba(255,255,255,0.9);
     width:100%;
     border-radius:3px;
     block-size:50px;
+    font-size:large;
     border-style:none;
+    transition:color 0.2s ease-in-out,box-shadow 0.2s ease-in-out,transform 0.2s ease-in-out;
 }
-input{
-    width:97%;
-    background-color:rgb(40,40,40);
-    border-style:solid;
-    border-color:gray;
-    border-radius:3px;
+button:hover{
+    box-shadow:3px 3px 3px rgba(255,255,255,0.9);
+    transform:translateX(-3px);
     color:white;
-    font-size:x-large;
+}
+#inputdiv{
+    background-color:darkslategray;
+    border-style:solid;
+    border-color:lightgray;
+    border-radius:3px;
+    overflow:hidden;
     block-size:50px;
+}
+#input{
+    color:black;
+    margin-left:3%;
+}
+@media(max-width:800px){
+    .calculatordiv{
+        width:40%;
+    }
+}
+@media(max-width:700px){
+    .calculatordiv{
+        width:50%;
+    }
+}
+@media(max-width:600px){
+    .calculatordiv{
+        width:55%;
+    }
+}
+@media(max-width:500px){
+    .calculatordiv{
+        width:60%;
+        padding:4%;
+    }
+}
+@media(max-width:450px){
+    .calculatordiv{
+        width:80%;
+        padding:5%;
+    }
 }
